--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@discordjs/voice": "^0.7.5",
     "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "fs-extra": "^10.0.0",
+    "minecraft-server-util": "^5.2.8"
   }
 }
