--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "uwu-bot",
+  "name": "uwu",
   "version": "2.0.0",
   "description": "funny little discord bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "tsc && cd dist && node index.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,10 @@
     "dotenv": "^10.0.0",
     "fs-extra": "^10.0.0",
     "minecraft-server-util": "^5.2.8"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^17.0.8",
+    "typescript": "^4.5.4"
   }
 }
